Rename ActivationFunction's name to id (#305)
