# api/openapi.json
@@ -93,27 +93,27 @@
         }
       }
     },
-    "/activation-function/{activation_function_name}": {
+    "/activation-function/{activation_function_id}": {
       "get": {
         "summary": "Get Activation Function",
         "description": "This function takes as input a range (min, max) and a step. For each value in this interval, it will apply the activation function, and return all the associated activations. This allows you to plot the activation function.",
-        "operationId": "Get_Activation_Function_activation_function__activation_function_name__get",
+        "operationId": "get_activation_function_activation_function__activation_function_id__get",
         "parameters": [
           {
-            "name": "activation_function_name",
+            "name": "activation_function_id",
             "in": "path",
             "required": true,
             "schema": {
               "type": "string",
-              "description": "Name of the activation function",
+              "description": "Id of the activation function",
               "examples": [
                 "gelu",
-                "gelu_new",
+                "approximate-gelu",
                 "silu"
               ],
-              "title": "Activation Function Name"
+              "title": "Activation Function Id"
             },
-            "description": "Name of the activation function"
+            "description": "Id of the activation function"
           },
           {
             "name": "min",
